8368181: Engine options - the whole configuration in one table
The engine-setup guide's 'Options worth setting deliberately' - six
rows of highlights - becomes 'Engine options': every configuration
choice, grouped as the builder groups them (language, the Java side,
compilation, the environment scripts see, debugging), each row naming
the builder method, the command-line spelling, the default and what it
decides. The diagnostic switches stay with the options reference.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01MroqvAFoC5CLSBtnh57oaE